# coder

./: .env.example  .gitignore  Makefile  README.md  coder  pyproject.toml  todo.txt
.github/workflows/: build-release.yml
src/: app.py  commands.py  logging_conf.py  settings.py  utils.py  welcome.py
src/internal/: agent.py  git_utils.py  memory_utils.py  system.md  workspace.py
src/internal/parse/: base.py  db.py  index_read.py  index_resolve.py  index_search.py  parser.py
src/internal/parse/languages/: factory.py  go_lang.py  javascript_lang.py  python_lang.py  rust_lang.py
src/internal/tools/: __init__.py  index_read.py  index_resolve.py  index_search.py  index_task_memory.py  list_files.py  patch_file.py  read_file.py  read_files.py  run_shell.py  tool_search.py  write_file.py
src/tests/: conftest.py  test_git_log_batch.py  test_index_db_batch.py
